[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blast-radius"
version = "1.0.0"
description = "AST call graph analyzer — what breaks if I change this file?"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "ast", "static-analysis", "dependency-analysis", "call-graph",
    "python", "devtools", "refactoring", "impact-analysis",
    "code-graph", "mermaid", "rich"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
watch = ["watchdog>=3.0"]
all = ["rich>=13.0", "watchdog>=3.0"]

[project.scripts]
blast-radius = "blast_radius.core:_cli"

[project.urls]
Homepage = "https://lexipro.online"
Repository = "https://github.com/brokenbartender/blast-radius"
Issues = "https://github.com/brokenbartender/blast-radius/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["blast_radius*"]
